[package]
name = "repo-lang-stat"
version = "0.2.0"
description = "A small cli tool to print the language statistics of a github repo"
authors = ["youaremagic"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0.0"
term_size = "0.3.2"
